--- a/fetools-app/src/pages/colorGradient.css
+++ b/fetools-app/src/pages/colorGradient.css
@@ -1,91 +1,93 @@
-:root{
-    --color1: hsla(356, 22%, 55%, 1);
-    --color2: hsla(31, 100%, 74%, 1);
-    --percentage1: 0%;
-    --percentage2: 100%;
-}
+@layer base{
+    :root{
+        --color1: hsla(356, 22%, 55%, 1);
+        --color2: hsla(31, 100%, 74%, 1);
+        --percentage1: 0%;
+        --percentage2: 100%;
+    }
 
-.wrap{
-    display: relative;
-    z-index: 0;
-}
+    .wrap{
+        display: relative;
+        z-index: 0;
+    }
 
-.slider {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 100%;
-    height: 100%;
-    outline: none;
-    z-index: 4;
-    cursor: copy;
-}
- 
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%; 
-    cursor: -webkit-grab;
-    pointer-events: auto;
-    transform: scale(1.2);
-    box-shadow: rgba(0, 0, 0, 0.15) 0 0 0 1px, rgba(0, 0, 0, 0.05) 0 10px 10px -5px, inset #fff 0 0 0 6px;
-}
+    .slider {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 100%;
+        height: 100%;
+        outline: none;
+        z-index: 4;
+        cursor: copy;
+    }
+    
+    .slider::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%; 
+        cursor: -webkit-grab;
+        pointer-events: auto;
+        transform: scale(1.2);
+        box-shadow: rgba(0, 0, 0, 0.15) 0 0 0 1px, rgba(0, 0, 0, 0.05) 0 10px 10px -5px, inset #fff 0 0 0 6px;
+    }
 
-.wrap .isActive::-webkit-slider-thumb{
-    box-shadow: #0066ff 0 0 0 1px, rgba(0, 0, 0, 0.05) 0 10px 10px -5px, inset #fff 0 0 0 6px;
-    z-index: 10;
-}
+    .wrap .isActive::-webkit-slider-thumb{
+        box-shadow: #0066ff 0 0 0 1px, rgba(0, 0, 0, 0.05) 0 10px 10px -5px, inset #fff 0 0 0 6px;
+        z-index: 10;
+    }
 
-.slider::-moz-range-thumb{
-    width: 30px;
-    height: 30px;
-    border-radius: 50%; 
-    cursor: -moz-grab;
-    pointer-events: auto;
-    transform: scale(1.2);
-}
+    .slider::-moz-range-thumb{
+        width: 30px;
+        height: 30px;
+        border-radius: 50%; 
+        cursor: -moz-grab;
+        pointer-events: auto;
+        transform: scale(1.2);
+    }
 
 
-.wrap .isActive::-moz-range-thumb{
-    box-shadow: #0066ff 0 0 0 1px, rgba(0, 0, 0, 0.05) 0 10px 10px -5px, inset #fff 0 0 0 6px;
-    z-index: 10;
-}
+    .wrap .isActive::-moz-range-thumb{
+        box-shadow: #0066ff 0 0 0 1px, rgba(0, 0, 0, 0.05) 0 10px 10px -5px, inset #fff 0 0 0 6px;
+        z-index: 10;
+    }
 
-.wrap label:nth-child(1) ::-webkit-slider-thumb {
-    background: var(--color1);
-}
+    .wrap label:nth-child(1) ::-webkit-slider-thumb {
+        background: var(--color1);
+    }
 
-.wrap label:nth-child(2) ::-webkit-slider-thumb {
-    background: var(--color2);
-}
+    .wrap label:nth-child(2) ::-webkit-slider-thumb {
+        background: var(--color2);
+    }
 
-.slider::-webkit-slider-runnable-track{
-    background: none; /* get rid of white Chrome background */
-    font: inherit; /* fix too small font-size in both Chrome & Firefox */
-    margin: 0;
-    pointer-events: none;
-}
+    .slider::-webkit-slider-runnable-track{
+        background: none; /* get rid of white Chrome background */
+        font: inherit; /* fix too small font-size in both Chrome & Firefox */
+        margin: 0;
+        pointer-events: none;
+    }
 
-.slider::-moz-range-track {
-    background: none; /* get rid of white Chrome background */
-    font: inherit; /* fix too small font-size in both Chrome & Firefox */
-    margin: 0;
-    pointer-events: none;
-}
+    .slider::-moz-range-track {
+        background: none; /* get rid of white Chrome background */
+        font: inherit; /* fix too small font-size in both Chrome & Firefox */
+        margin: 0;
+        pointer-events: none;
+    }
 
-.gradient{
-    background: linear-gradient(90deg, var(--color1) var(--percentage1), var(--color2) var(--percentage2));
-}
+    .gradient{
+        background: linear-gradient(90deg, var(--color1) var(--percentage1), var(--color2) var(--percentage2));
+    }
 
-.gradientCSS{
-    background: hsla(356, 22%, 55%, 1);
+    .gradientCSS{
+        background: hsla(356, 22%, 55%, 1);
 
-    background: linear-gradient(90deg, hsla(356, 22%, 55%, 1) 0%, hsla(31, 100%, 74%, 1) 100%);
+        background: linear-gradient(90deg, hsla(356, 22%, 55%, 1) 0%, hsla(31, 100%, 74%, 1) 100%);
 
-    background: -moz-linear-gradient(90deg, hsla(356, 22%, 55%, 1) 0%, hsla(31, 100%, 74%, 1) 100%);
+        background: -moz-linear-gradient(90deg, hsla(356, 22%, 55%, 1) 0%, hsla(31, 100%, 74%, 1) 100%);
 
-    background: -webkit-linear-gradient(0deg, hsla(356, 22%, 55%, 1) 0%, hsla(31, 100%, 74%, 1) 100%);
+        background: -webkit-linear-gradient(0deg, hsla(356, 22%, 55%, 1) 0%, hsla(31, 100%, 74%, 1) 100%);
 
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#A47275", endColorstr="#FFC07C", GradientType=1 );
+        filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#A47275", endColorstr="#FFC07C", GradientType=1 );
+    }
 }
