--- a/fetools-app/src/index.css
+++ b/fetools-app/src/index.css
@@ -81,10 +81,10 @@
 @layer base{
   @layer ColorGradient{
     :root{
-      --color1-gradient: hsla(356, 22%, 55%, 1);
-      --color2-gradient: hsla(31, 100%, 74%, 1);
-      --color1-thumb: hsla(356, 22%, 55%, 1);
-      --color2-thumb: hsla(31, 100%, 74%, 1);
+      --color1-gradient: ''
+      --color2-gradient: ''
+      --color1-thumb: ''
+      --color2-thumb: ''
      
       --percentage1: 0%;
       --percentage2: 100%;
@@ -159,7 +159,7 @@
     }
 
     .gradient{
-        background: linear-gradient(90deg, var(--color1-gradient) var(--percentage1), var(--color2-gradient) var(--percentage2));
+        background: '';
     }
 
     .gradientCSS{
