--- a/fetools-app/src/index.css
+++ b/fetools-app/src/index.css
@@ -80,22 +80,12 @@
 
 @layer base{
   @layer ColorGradient{
-    :root{
-      --color1-gradient: ''
-      --color2-gradient: ''
-      --color1-thumb: ''
-      --color2-thumb: ''
-     
-      --percentage1: 0%;
-      --percentage2: 100%;
-    }
-
     .wrap{
         display: relative;
         z-index: 0;
     }
-
-    .slider {
+   
+    .slider{
         -webkit-appearance: none;
         appearance: none;
         width: 100%;
@@ -105,7 +95,7 @@
         cursor: copy;
     }
     
-    .slider::-webkit-slider-thumb {
+    .slider::-webkit-slider-thumb{
         -webkit-appearance: none;
         appearance: none;
         width: 30px;
@@ -136,14 +126,6 @@
         z-index: 10;
     }
 
-    .wrap label:nth-child(1) ::-webkit-slider-thumb {
-        background: var(--color1-thumb);
-    }
-
-    .wrap label:nth-child(2) ::-webkit-slider-thumb {
-        background: var(--color2-thumb);
-    }
-
     .slider::-webkit-slider-runnable-track{
         background: none; /* get rid of white Chrome background */
         font: inherit; /* fix too small font-size in both Chrome & Firefox */
@@ -158,8 +140,38 @@
         pointer-events: none;
     }
 
-    .gradient{
-        background: '';
+    @layer thumbColorStyle{
+      .wrap label:nth-of-type(1) ::-webkit-slider-thumb{
+        background: var(--thumb-color-0);
+      }
+  
+      .wrap label:nth-of-type(2) ::-webkit-slider-thumb{
+        background: var(--thumb-color-1);
+      }
+  
+      .wrap label:nth-of-type(3) ::-webkit-slider-thumb{
+        background: var(--thumb-color-2);
+      }
+  
+      .wrap label:nth-of-type(4) ::-webkit-slider-thumb{
+        background: var(--thumb-color-3);
+      }
+  
+      .wrap label:nth-of-type(5) ::-webkit-slider-thumb{
+        background: var(--thumb-color-4);
+      }
+  
+      .wrap label:nth-of-type(6) ::-webkit-slider-thumb{
+        background: var(--thumb-color-5);
+      }
+  
+      .wrap label:nth-of-type(7) ::-webkit-slider-thumb{
+        background: var(--thumb-color-6);
+      }
+  
+      .wrap label:nth-of-type(8) ::-webkit-slider-thumb{
+        background: var(--thumb-color-7);
+      }
     }
 
     .gradientCSS{
