Revert "Merge pull request #43 from chingu-voyages/steven-branch-sprint3v3"
This reverts commit 689ef7183f919bb8ee3d9b1a24033844d5cfdfd1, reversing
changes made to 30b86f3908fcd55b8fc15683b655a9e32ef75107.

--- a/fetools-app/src/index.css
+++ b/fetools-app/src/index.css
@@ -186,6 +186,14 @@
       }
     }
 
+    @layer interfaceStyle{
+      input[type=text]:nth-of-type(2){
+        text-align: center;
+      
+      }
+    }
+
+
     .gradientCSS{
         background: hsla(356, 22%, 55%, 1);
 
