--- a/fetools-app/src/index.css
+++ b/fetools-app/src/index.css
@@ -198,4 +198,68 @@
         filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#A47275", endColorstr="#FFC07C", GradientType=1 );
     }
   }
+
+  @layer ColorPicker{
+
+    .colorPickerSlider{
+      --hue-thumb-color: #000;
+    }
+
+    .hueSlider{
+      -webkit-appearance :none;
+      -moz-appearance :none;
+      appearance: none;
+    }
+
+    .hueSlider::-webkit-slider-runnable-track{
+      -webkit-appearance: none;
+      appearance: none;
+      background: none;
+      background: linear-gradient(
+        90deg, 
+        hsla(0, 100%, 50%, 1), 
+        hsla(60, 100%, 50%, 1), 
+        hsla(120, 100%, 50%, 1), 
+        hsla(180, 100%, 50%, 1), 
+        hsla(240, 100%, 50%, 1), 
+        hsla(300, 100%, 50%, 1), 
+        hsla(360, 100%, 50%, 1));
+      border-radius: 5px;
+      box-shadow: 0 0 1px 0 #000;
+      height: 12px;
+    }
+
+    .hueSlider::-moz-range-track{
+      -webkit-appearance: none;
+      appearance: none;
+      background: none;
+      background: #d3d3d3;
+      height: 12px;
+    }
+
+    .hueSlider::-webkit-slider-thumb{
+      -webkit-appearance: none;
+      appearance: none;
+      cursor: pointer;
+      aspect-ratio: 1;
+      transform: translateY(-8%) scale(2);
+      background: var(--hue-thumb-color);
+      border-radius: 50%;
+      height: 13px;
+      width: 13px;
+      box-shadow: rgba(0, 0, 0, 0.15) 0 0 0 0.5px, rgba(0, 0, 0, 0.05) 0 5px 5px -2.5px, inset #fff 0 0 0 1.5px;
+    }
+
+    .hueSlider::-moz-range-thumb{
+      -webkit-appearance: none;
+      appearance: none;
+      background: none;
+      cursor: pointer;
+      aspect-ratio: 1;
+      height: 20px;
+      border-radius: 50%;
+      box-shadow: rgba(0, 0, 0, 0.15) 0 0 0 1px, rgba(0, 0, 0, 0.05) 0 10px 10px -5px, inset #fff 0 0 0 6px;
+    }
+
+  }
 }
