--- a/fetools-app/src/index.css
+++ b/fetools-app/src/index.css
@@ -203,6 +203,10 @@
 
     .colorPickerSliderVar{
       --hue-thumb-color: #000;
+      --sat-thumb-color: #000;
+      --sat-slider-color: #fff;
+      --light-thumb-color: #fff;
+      --light-slider-color: #fff;
     }
 
     .colorPickerSlider{
@@ -235,7 +239,6 @@
       cursor: pointer;
       aspect-ratio: 1;
       transform: translateY(-8%) scale(2);
-      background: var(--hue-thumb-color);
       border-radius: 50%;
       height: 13px;
       width: 13px;
@@ -248,13 +251,20 @@
       cursor: pointer;
       aspect-ratio: 1;
       transform: translateY(-8%) scale(2);
-      background: var(--hue-thumb-color);
       border-radius: 50%;
       height: 13px;
       width: 13px;
       box-shadow: rgba(0, 0, 0, 0.15) 0 0 0 0.5px, rgba(0, 0, 0, 0.05) 0 5px 5px -2.5px, inset #fff 0 0 0 1.5px;
     }
 
+    .hueSlider::-webkit-slider-thumb{
+      background: var(--hue-thumb-color);
+    }
+    
+    .hueSlider::-moz-range-thumb{
+      background: var(--hue-thumb-color);
+    }
+    
     .hueSlider::-webkit-slider-runnable-track{
       background: linear-gradient(
         90deg, 
@@ -279,6 +289,37 @@
         hsla(360, 100%, 50%, 1));
     }
 
+    .satSlider::-webkit-slider-thumb{
+      background: var(--sat-thumb-color);
+    }
+    
+    .satSlider::-moz-range-thumb{
+      background: var(--sat-thumb-color);
+    }
+
+    .satSlider::-webkit-slider-runnable-track{
+      background: var(--sat-slider-color);
+    }
+
+    .satSlider::-moz-range-track{
+      background: var(--sat-slider-color);
+    }
+
+    .lightSlider::-webkit-slider-thumb{
+      background: var(--light-thumb-color);
+    }
+    
+    .lightSlider::-moz-range-thumb{
+      background: var(--light-thumb-color);
+    }
+
+    .lightSlider::-webkit-slider-runnable-track{
+      background: var(--light-slider-color);
+    }
+
+    .lightSlider::-moz-range-track{
+      background: var(--light-slider-color);
+    }
 
   }
 }
