--- a/fetools-app/src/index.css
+++ b/fetools-app/src/index.css
@@ -92,6 +92,20 @@
 }
 
 @layer base {
+
+  @layer InputComponents{
+    #custom-color-input::-webkit-color-swatch-wrapper{
+      padding: 0;
+      margin: 0;
+
+    }
+
+    #custom-color-input::-webkit-color-swatch{
+      border: none;
+      border-radius: 4px;
+    }
+  }
+
   @layer ColorGradient {
     .wrap {
       display: relative;
