--- a/fetools-app/src/index.css
+++ b/fetools-app/src/index.css
@@ -107,6 +107,39 @@
       border: none;
       border-radius: 4px;
     }
+
+    #custom-slider-input{
+      -webkit-appearance: none;
+      appearance: none;
+    }
+
+    #custom-slider-input::-webkit-slider-thumb{
+      -webkit-appearance: none;
+      appearance: none;
+      border-radius: 50%;
+      height: 12px;
+      width: 12px;
+      outline: solid 2px #D9D9D9;
+      transform: translateY(-30%);
+      background-color: #717171;
+    }
+
+    #custom-slider-input::-webkit-slider-runnable-track{
+      background: none;/* get rid of white Chrome background */
+      font: inherit; /* fix too small font-size in both Chrome & Firefox */
+      margin: 0;
+      pointer-events: none;
+      height: 4px;
+      border-radius: 2px;
+      background-color: #D9D9D9;
+    }
+
+    #custom-slider-input::-moz-range-track {
+      background: none;/* get rid of white Chrome background */
+      font: inherit; /* fix too small font-size in both Chrome & Firefox */
+      margin: 0;
+      pointer-events: none;
+    }
   }
 
   @layer ColorGradient {
