--- a/fetools-app/src/index.css
+++ b/fetools-app/src/index.css
@@ -94,6 +94,12 @@
 @layer base {
 
   @layer InputComponents{
+
+    *:focus-visible{
+      margin: 2px;
+      outline: 2px solid #4A256F;
+    }
+
     #custom-color-input::-webkit-color-swatch-wrapper{
       height: 100%;
       width: 100%;
@@ -106,50 +112,6 @@
       width: 100%;
       border: none;
       border-radius: 4px;
-    }
-
-    #custom-slider-input{
-      -webkit-appearance: none;
-      appearance: none;
-    }
-
-    #custom-slider-input::-webkit-slider-thumb{
-      -webkit-appearance: none;
-      appearance: none;
-      border-radius: 50%;
-      height: 12px;
-      width: 12px;
-      outline: solid 2px #D9D9D9;
-      transform: translateY(-30%);
-      background-color: #717171;
-    }
-
-    #custom-slider-input::-moz-range-thumb{
-      appearance: none;
-      border-radius: 50%;
-      height: 12px;
-      width: 12px;
-      outline: solid 2px #D9D9D9;
-      transform: translateY(-30%);
-      background-color: #717171;
-    }
-
-    #custom-slider-input::-webkit-slider-runnable-track{
-      background: none;/* get rid of white Chrome background */
-      font: inherit; /* fix too small font-size in both Chrome & Firefox */
-      margin: 0;
-      height: 4px;
-      border-radius: 2px;
-      background-color: #D9D9D9;
-    }
-
-    #custom-slider-input::-moz-range-track {
-      background: none;/* get rid of white Chrome background */
-      font: inherit; /* fix too small font-size in both Chrome & Firefox */
-      margin: 0;
-      height: 4px;
-      border-radius: 2px;
-      background-color: #D9D9D9;
     }
   }
 
@@ -191,7 +153,7 @@
     }
 
     .wrap .isActive::-webkit-slider-thumb {
-      box-shadow: #0066ff 0 0 0 1px, rgba(0, 0, 0, 0.05) 0 5px 5px -2.5px, inset #fff 0 0 0 1.5px;
+      box-shadow: #4A256F 0 0 0 1px, rgba(0, 0, 0, 0.05) 0 5px 5px -2.5px, inset #fff 0 0 0 1.5px;
       z-index: 10;
     }
 
