--- a/fetools-app/src/index.css
+++ b/fetools-app/src/index.css
@@ -305,6 +305,10 @@
       box-shadow: rgba(0, 0, 0, 0.15) 0 0 0 0.5px, rgba(0, 0, 0, 0.05) 0 5px 5px -2.5px, inset #fff 0 0 0 1.5px;
     }
 
+    #picker-handles-container .isActive::-webkit-slider-thumb{
+      box-shadow: #4A256F 0 0 0 .8px, rgba(0, 0, 0, 0.05) 0 5px 5px -2.5px, inset #fff 0 0 0 1.5px;
+    }
+
     .colorPickerSlider::-moz-range-thumb{
       -webkit-appearance: none;
       appearance: none;
