--- a/fetools-app/src/index.css
+++ b/fetools-app/src/index.css
@@ -96,8 +96,7 @@
   @layer InputComponents{
 
     *:focus-visible{
-      margin: 2px;
-      outline: 2px solid #4A256F;
+      outline: 2px solid #7F40BF;
     }
 
     #custom-color-input::-webkit-color-swatch-wrapper{
