less complex bookmark, hover and hidden styled in css for hover-options
, width and height is global on bookmark objects now

--- a/fetools-app/src/index.css
+++ b/fetools-app/src/index.css
@@ -436,4 +436,17 @@
       }
     }
   }
+
+  @layer Bookmark{
+
+    #hover-options{
+      opacity: 0;
+    }
+
+    #hover-options:hover{
+      opacity: 100%;
+      display: block;
+      background-color: rgba(0, 0, 0, 0.25);
+    }
+  }
 }
