--- a/fetools-app/src/index.css
+++ b/fetools-app/src/index.css
@@ -125,19 +125,26 @@
       appearance: none;
       /* For iOS < 15 to remove gradient background */
       background-color: #fff;
+      outline: none;
       /* Not removed via appearance */
       margin: 0;
     }
 
     #tab-input input[type="radio"]:checked{
-      outline: 1px solid #000;
+      outline: 1px solid #666;
       border-radius: 2px;
     }
 
-    #tab-input label:hover{
-      outline: 1px solid #555;
-      background: #7F40BF;
+    #tab-input input[type="radio"]:focus-visible{
+      outline: 2px solid #7F40BF;
+      z-index: 10;
+    }
+
+
+    #tab-input label div:hover{
+      outline: 1px solid #111;
       border-radius: 2px;
+      color: #7F40BF;
     }
   }
 
