--- a/fetools-app/src/index.css
+++ b/fetools-app/src/index.css
@@ -119,29 +119,14 @@
       border-radius: 4px;
     }
 
-    #tab-input input[type="radio"]{
+    #tab-input button{
       /* Add if not using autoprefixer */
       -webkit-appearance: none;
       appearance: none;
       /* For iOS < 15 to remove gradient background */
-      background-color: #fff;
-      outline: none;
       /* Not removed via appearance */
       margin: 0;
-    }
-
-    #tab-input input[type="radio"]:checked{
-      outline: 1px solid #666;
-      border-radius: 2px;
-    }
-
-    
-    #tab-input label:hover{
-      outline: 1px solid #111;
-      border-radius: 2px;
-      color: #7F40BF;
-    }
-    
+    }    
   }
 
   @layer ColorGradient {
